--- a/company/templates/hofsted.html
+++ b/company/templates/hofsted.html
@@ -717,4 +717,5 @@
         startAnimationIfVisible();
         $(window).on('scroll', startAnimationIfVisible);
     });
-</script>{% endblock %}
+</script>
+{% endblock %}
