--- a/company/templates/pestle.html
+++ b/company/templates/pestle.html
@@ -189,6 +189,7 @@
      </div>
     </div>
   </div>
+</div>
 
   <div style="height: 65px; padding-bottom: 25%; background-color: #bee1c7;" class="row">
       <div class="col-md-10">
@@ -206,6 +207,8 @@
           <button style="margin-top: 30%; margin-left: -12%;" class="buttonEE btn btn-success btn-xl btn-circle">E</button>
         </div>
     </div>
+  </div>
+
 </div>
 
         
