--- a/company/templates/competitiveness.html
+++ b/company/templates/competitiveness.html
@@ -440,10 +440,26 @@
 
     
   </style>
+  <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
 
-  <div style="display: grid; grid-template-columns: 1fr 1fr;">
+    <ul class="nav nav-pills" style="margin-top: 5%;">
+      <li class="nav-item">
+      <a class="nav-link" style="color:#0d6efd !important" href="#">Competitive in Global Market&nbsp;&nbsp;&gt; </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" style="color:#0d6efd !important" href="#content1">Resources and Capabilities</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" style="color:#0d6efd !important" href="#content2">Value Chain</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" style="color:#0d6efd !important" href="#content3">Porter's Analysis</a>
+      </li>
+    </ul>
+    </nav>
+  <div style="display: grid; grid-template-columns: 1fr 1fr;" id="content1">
     <div class="timeline" style="margin-right: 5%;">
-      <p style="text-align: center; margin-top: 15%;">
+      <p style="text-align: center;">
         <strong style="color:#fa8321 !important; font-size:xx-large; ">RESOURCES</strong>
       </p>
       <div class="timeline__event animated fadeInUp timeline__event--type1">
@@ -509,7 +525,7 @@
     </div>
 
     <div class="timeline" style="margin-right: 5%;">
-        <p style="text-align: center; margin-top: 15%;">
+        <p style="text-align: center;">
           <strong style="color:#fa8321 !important; font-size:xx-large; ">CAPABILITIES</strong>
         </p>
         <div class="timeline__event animated fadeInUp timeline__event--type1">
@@ -570,7 +586,7 @@
         </div>
       </div>
   </div>
-<div>
+<div id="content2">
     <strong style="color:#fa8321 !important; font-size:xx-large; margin:2%">
       VALUE CHAIN SHOWED HIGER PROFIT IN SOUTH KOREA
     </strong>
@@ -643,7 +659,7 @@
   </div>
 </div>
 
-<div style="margin-bottom: 5% !important;">
+<div style="margin-bottom: 5% !important;" id="content3">
   <strong style="color:#fa8321 !important; font-size:xx-large; margin:2%;">
     PORTER'S ANALYSIS CONCLUDES BOTH MARKETS GREAT FOR BUSINESS</strong>
     <br><strong style="color:#fa8321 !important; font-size:xx-large; margin:2%;"> DUE TO SPECIALIZED TECH AND COMPETITIVE EDGE
