--- a/company/templates/hofsted.html
+++ b/company/templates/hofsted.html
@@ -248,8 +248,16 @@
         }
         
     </style>
+    
+
+
+    <p style="margin-top: 6%;">
+        <strong style="color:#fa8321 !important; font-size:xx-large; text-transform: uppercase;">Incredible Eats' success in South Korea depends on adapting from individualism to collectivism, prioritizing long-term relationships and trust-building</strong>
+      </p>
+
+
     <div style="display: grid; grid-template-columns: 1fr 1fr;
-                                        margin-top: 6%;
+                                        
                                         margin-left: 8%;">
         <div style="margin-left: 5%">
             <table style="text-align: center">
