--- a/company/templates/pestle.html
+++ b/company/templates/pestle.html
@@ -90,9 +90,10 @@
   </div>
   
   <div>
-    <p style="margin-top:2%; margin-left: 2%;"><strong style="color:#fa8321 !important; font-size:x-large; ">
+    <p style="margin-top:2%; margin-left: 2%; color:#fa8321 !important;"><strong style="color:#fa8321 !important; font-size:x-large; ">
       LANGUAGE BARRIER IS THE GREATEST CHALLENGE FACED BY INCREDIBLE EATS IN SOUTH KOREA
-    </strong> </p>
+    </strong> 
+  <br>(Please hover on challenges to see mitigations)</p>
   </div>
 
   <div>
