--- a/company/templates/index.html
+++ b/company/templates/index.html
@@ -92,7 +92,37 @@
     left: 50%;
     top: calc(50% - 3px);
   }
+  
 </style>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen" role="document">
+    <div class="modal-content" style="width:90%; height:90%; background-color:#fa8321 !important">
+      <div class="modal-header" style="border-bottom: none !important;">
+        <h4 style="text-align: center;">
+          GOING GLOBAL: TAKING INCREDIBLE EATS FROM USA TO SOUTH KOREA
+        </h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" style="font-size: xx-large; border:2px solid white; padding: 10px; border-radius:10%;">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" style="text-align: center;">
+        <b>GURLEEN KAUR</b><br><br><br>
+        School of Business, Trinity Western University<br><br>
+        MBA 662 D: Managing a Global Organization<br><br>
+        Robert Ian Angell<br><br>
+        October 29, 2023  
+      </div>
+      <img src="{% static 'mainimage.png' %}"/>
+    </div>
+  </div>
+</div>
+
 <div class="maintext">
   <img class="imagemain" src="{% static 'main.png' %}" />
 </div>
@@ -401,6 +431,32 @@
   <br /><br />
 </div>
 
+<div style="background-color: #e6e6e6; background: url({% static 'usatokorea.png' %}) no-repeat center; background-size:100% 170%">
+  <br />
+  <p></p>
+  <p
+  style="
+    color: black !important;
+    padding: 10px;
+    width: 50%;
+    margin: 10px auto;
+    text-align: center;
+    font-size: large;
+    font-weight: 600 !important;
+  "
+>
+Incredible Eats chose South Korea to expand its business 
+globally as it aligns with South Koreans' global concern about 
+plastic pollution and a growing demand for eco-friendly alternatives there. 
+South Korea's environmental awareness, legislation against single-use plastics, 
+and consumer interest make it a 
+strategic location to address these concerns and tap into a sustainable market.
+</p>
+  <p></p>
+  <br />
+</div>
+
+
 <div style="display: inline-grid; grid-template-columns: 1fr 1fr">
   {% comment %}
   <div>
@@ -420,6 +476,8 @@
       text-align: center;
     "
   >
+
+
     <span style="position: relative; z-index: 2; margin: 20%">
       Sustainability remains a central focus for IncrEDIBLE Eats. The company
       has been able to offset its 200% of carbon footprint and continues to
@@ -592,8 +650,17 @@
       ></div>
     </div>
   </div>
+  <!-- Button trigger modal -->
+<button type="button" style="display:none;" class="btn btn-primary" id="modalbutton" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
 </div>
 
 
+<script>
+  $(document).ready(function() {
+      $('#modalbutton').click();
+  });
+</script>
 
 {% endblock %}
