--- a/company/templates/competitiveness.html
+++ b/company/templates/competitiveness.html
@@ -659,11 +659,12 @@
   </div>
 </div>
 
-<div style="margin-bottom: 5% !important;" id="content3">
+<div style="margin-bottom: 5% !important; color:#fa8321 !important;" id="content3">
   <strong style="color:#fa8321 !important; font-size:xx-large; margin:2%;">
     PORTER'S ANALYSIS CONCLUDES BOTH MARKETS GREAT FOR BUSINESS</strong>
     <br><strong style="color:#fa8321 !important; font-size:xx-large; margin:2%;"> DUE TO SPECIALIZED TECH AND COMPETITIVE EDGE
   </strong>
+  <br><p style="color:#fa8321 !important; margin-left:2%">(Please hover on each element to see why)</p>
 </div>
 <div style="display: grid; grid-template-columns: 1fr 1fr; margin:5%;">
   <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; margin:5%; margin-top:-3% !important">
