--- a/company/templates/competitiveness.html
+++ b/company/templates/competitiveness.html
@@ -664,7 +664,7 @@
     PORTER'S ANALYSIS CONCLUDES BOTH MARKETS GREAT FOR BUSINESS</strong>
     <br><strong style="color:#fa8321 !important; font-size:xx-large; margin:2%;"> DUE TO SPECIALIZED TECH AND COMPETITIVE EDGE
   </strong>
-  <br><p style="color:#fa8321 !important; margin-left:2%">(Please hover on each element to see why)</p>
+  <br><p style="color:#fa8321 !important; margin-left:2%">(Please hover on each element to see the reason.)</p>
 </div>
 <div style="display: grid; grid-template-columns: 1fr 1fr; margin:5%;">
   <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; margin:5%; margin-top:-3% !important">
