--- a/company/templates/base.html
+++ b/company/templates/base.html
@@ -126,6 +126,9 @@
                 <a class="nav-link {% if request.path == request.resolver_match.url_name and request.resolver_match.url_name == 'entry_view' %}nav-link-active{% endif %}" href="{% url 'entry_view' %}">Entering the global market</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link {% if request.path == request.resolver_match.url_name and request.resolver_match.url_name == 'goingglobal' %}nav-link-active{% endif %}" href="{% url 'goingglobal' %}">Final Implementation</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link {% if request.path == request.resolver_match.url_name and request.resolver_match.url_name == 'citations' %}nav-link-active{% endif %}" href="{% url 'citations' %}">Citations</a>
               </li>
             </ul>
@@ -176,6 +179,7 @@
       <li class="li"><a href="{% url 'hofsted_view' %}">Hofsted's Cultural Dimensions</a></li>
       <li class="li"><a href="{% url 'competitive_view' %}">Competitiveness Analysis</a></li>
       <li class="li"><a href="{% url 'entry_view' %}">Entering the Global market</a></li>
+      <li class="li"><a href="{% url 'goingglobal' %}">Final Implementation</a></li>
       <li class="li"><a href="{% url 'citations' %}">Citations</a></li>
       <li class="li"><p></p><p></p><p></p></li>
       <li class="li">Created by: Gurleen Kaur</li>
