--- a/company/templates/base.html
+++ b/company/templates/base.html
@@ -33,7 +33,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Incredible Eats</title>
+    <title>Incredible Eats- Going Global</title>
     <link rel="icon" type="image/x-icon" href="{% static 'title_logo.png' %}" />
     <link
       href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
